<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.FatherInfo">


    <RelativeLayout
        android:id="@+id/relat"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/stroke_btn_emergency"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/textBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:backgroundTint="@color/black"
            android:layout_marginTop="20dp"
            android:background="@drawable/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:textSize="21dp"
            android:textColor="@color/black"
            android:fontFamily="@font/comicz"
            android:textStyle="bold"
            android:text="Mother Information"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Step 2 of 4"
                android:fontFamily="@font/listfont"
                android:textColor="#111"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:layout_gravity="right"/>
            <EditText
                android:id="@+id/motherName"
                android:layout_width="match_parent"
                android:layout_height="45dp"

                android:layout_marginTop="20dp"
                android:hint="@string/mothername"
                android:layout_below="@+id/sign"
                android:paddingLeft="5dp"
                android:inputType="textPersonName"
                android:background="@drawable/strock_edt_father"/>

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="45dp"

                android:layout_marginTop="10dp"
                android:hint="@string/mobileno"
                android:layout_below="@+id/sign"
                android:paddingLeft="5dp"
                android:inputType="phone"
                android:background="@drawable/strock_edt_father"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/strock_edt_father"
                android:layout_marginTop="10dp">
                <Spinner
                    android:id="@+id/educationSpin"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_alignTop="@+id/postImageView" />
            </LinearLayout>

            <!--<EditText-->
                <!--android:id="@+id/education"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="45dp"-->

                <!--android:layout_marginTop="10dp"-->
                <!--android:hint="Education*"-->
                <!--android:layout_below="@+id/sign"-->
                <!--android:paddingLeft="5dp"-->
                <!--android:inputType="textPersonName"-->
                <!--android:background="@drawable/strock_edt_father"/>-->
            <EditText
                android:id="@+id/ocption"
                android:layout_width="match_parent"
                android:layout_height="45dp"

                android:layout_marginTop="10dp"
                android:hint="@string/Occupation"
                android:layout_below="@+id/sign"
                android:paddingLeft="5dp"
                android:inputType="textPersonName"
                android:background="@drawable/strock_edt_father"/>
            <EditText
                android:id="@+id/pow"
                android:layout_width="match_parent"
                android:layout_height="45dp"

                android:layout_marginTop="10dp"
                android:hint="Place of work*"
                android:layout_below="@+id/sign"
                android:paddingLeft="5dp"
                android:inputType="textPersonName"
                android:background="@drawable/strock_edt_father"/>

            <EditText
                android:id="@+id/workNo"
                android:layout_width="match_parent"
                android:layout_height="45dp"

                android:layout_marginTop="10dp"
                android:hint="@string/workno"
                android:layout_below="@+id/sign"
                android:paddingLeft="5dp"
                android:inputType="number"
                android:background="@drawable/strock_edt_father"/>

            <EditText
                android:id="@+id/emailId"
                android:layout_width="match_parent"
                android:layout_height="45dp"

                android:layout_marginTop="10dp"
                android:hint="@string/emailaddress"
                android:layout_below="@+id/sign"
                android:paddingLeft="5dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/strock_edt_father"/>

            <EditText
                android:id="@+id/homeAddress"
                android:layout_width="match_parent"
                android:layout_height="45dp"

                android:layout_marginTop="10dp"
                android:hint="@string/homeaddress"
                android:layout_below="@+id/sign"
                android:paddingLeft="5dp"
                android:inputType="textPersonName"
                android:background="@drawable/strock_edt_father"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/next"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textColor="@color/black"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/stroke_btn1"
                    android:text="NEXT"/>
                <Button
                    android:id="@+id/textBack2"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/stroke_btn2"
                    android:text="CANCEL"/>


            </LinearLayout>



        </LinearLayout>
    </ScrollView>
</LinearLayout>